# applications

./: .gitignore  AGENTS.md  APPLICATION.md  README.md  SETUP.md  SKILL.md  TESTING.md  bump_and_release.sh  create_demo_shared_view.py  pyproject.toml
examples/: children_story_builder.py
src/scripts/: check_internal_calls.py  convert_to_async.py  docgen.py  make_async.py  make_http_async.py  prompts.py  readme.py  run_docgen.py
src/tests/: conftest.py  test_applications.py
src/universal_mcp/applications/: BEST_PRACTICES.md
src/universal_mcp/applications/ahrefs/: README.md  app.py
src/universal_mcp/applications/airtable/: README.md  __init__.py  app.py
src/universal_mcp/applications/apollo/: __init__.py  app.py
src/universal_mcp/applications/asana/: README.md  app.py
src/universal_mcp/applications/attio/: __init__.py  app.py  schemas.py
src/universal_mcp/applications/aws-s3/: __init__.py  app.py
src/universal_mcp/applications/aws_s3/: README.md  app.py
src/universal_mcp/applications/bill/: README.md  __init__.py  app.py
src/universal_mcp/applications/box/: __init__.py  app.py
src/universal_mcp/applications/braze/: __init__.py  app.py
src/universal_mcp/applications/browser_use/: README.md  __init__.py  app.py
src/universal_mcp/applications/cal-com-v2/: app.py
src/universal_mcp/applications/cal_com_v2/: __init__.py  app.py
src/universal_mcp/applications/calendly/: README.md  app.py
src/universal_mcp/applications/canva/: README.md  __init__.py  app.py
src/universal_mcp/applications/clickup/: README.md  app.py
src/universal_mcp/applications/coda/: README.md  __init__.py  app.py
src/universal_mcp_applications/: app.py  server.py
src/universal_mcp_applications/ahrefs/: README.md  __init__.py
src/universal_mcp_applications/apollo/: README.md  app.py
src/universal_mcp_applications/asana/: __init__.py  app.py
src/universal_mcp_applications/bill/: app.py
src/universal_mcp_applications/box/: app.py
src/universal_mcp_applications/braze/: app.py
src/universal_mcp_applications/cal-com-v2/: __init__.py
src/universal_mcp_applications/calendly/: __init__.py  app.py
src/universal_mcp_applications/clickup/: __init__.py
src/universal_mcp_applications/confluence/: __init__.py
src/universal_mcp_applications/contentful/: app.py
src/universal_mcp_applications/crustdata/: __init__.py
src/universal_mcp_applications/dialpad/: __init__.py  app.py
src/universal_mcp_applications/digitalocean/: __init__.py
src/universal_mcp_applications/exa/: __init__.py  app.py
src/universal_mcp_applications/falai/: __init__.py
src/universal_mcp_applications/figma/: app.py
src/universal_mcp_applications/fpl/: README.md  __init__.py
src/universal_mcp_applications/ghost-content/: app.py
src/universal_mcp_applications/github/: __init__.py  app.py
src/universal_mcp_applications/google-ads/: app.py
src/universal_mcp_applications/google-calendar/: __init__.py  app.py
src/universal_mcp_applications/google-docs/: __init__.py
src/universal_mcp_applications/google-drive/: app.py
src/universal_mcp_applications/google-mail/: __init__.py
src/universal_mcp_applications/hashnode/: __init__.py
src/universal_mcp_applications/heygen/: __init__.py  app.py
src/universal_mcp_applications/hubspot/: app.py
src/universal_mcp_applications/klaviyo/: __init__.py  app.py
src/universal_mcp_applications/linkedin/: __init__.py  app.py
src/universal_mcp_applications/ms-teams/: app.py
src/universal_mcp_applications/neon/: __init__.py
src/universal_mcp_applications/notion/: __init__.py
src/universal_mcp_applications/openai/: __init__.py
src/universal_mcp_applications/outlook/: app.py
src/universal_mcp_applications/pipedrive/: app.py
src/universal_mcp_applications/reddit/: __init__.py  app.py
src/universal_mcp_applications/rocketlane/: __init__.py  app.py
src/universal_mcp_applications/semrush/: __init__.py  app.py
src/universal_mcp_applications/sendgrid/: __init__.py  app.py
src/universal_mcp_applications/sentry/: __init__.py
src/universal_mcp_applications/sharepoint/: app.py
src/universal_mcp_applications/shopify/: app.py
src/universal_mcp_applications/slack/: __init__.py  app.py
src/universal_mcp_applications/spotify/: __init__.py
src/universal_mcp_applications/supabase/: __init__.py
src/universal_mcp_applications/trello/: __init__.py
src/universal_mcp_applications/unipile/: __init__.py  app.py
src/universal_mcp_applications/whatsapp/: __init__.py  app.py
src/universal_mcp_applications/whatsapp-business/: __init__.py  app.py
src/universal_mcp_applications/wrike/: app.py
src/universal_mcp_applications/youtube/: __init__.py  app.py
src/universal_mcp_applications/zenquotes/: app.py
tests/: test_app.py
(+241 files in other folders)
