[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "universal-mcp-applications"
version = "0.1.0"
description = "A Universal MCP Application: universal_mcp_applications"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Manoj Bajaj", email = "manoj@agentr.dev" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3>=1.38.32",
    "dnspython>=2.4.0",
    "e2b-code-interpreter>=1.2.1",
    "fal-client>=0.5.9",
    "firecrawl-py>=3.0.3",
    "google-search-results>=2.4.2",
    "gql[all]>=3.5.2",
    "httpx-aiohttp>=0.1.8",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
    "langgraph>=0.5.4",
    "langgraph>=0.6.0",
    "langgraph>=0.6.1",
    "langgraph>=0.6.3",
    "langgraph>=0.6.4",
    "langgraph>=0.6.5",
    "markitdown[all]>=0.1.1",
    "office365-rest-python-client>=2.6.2",
    "openai>=1.75.0",
    "pyairtable>=3.1.1",
    "pytest-asyncio>=1.1.0",
    "pytest>=8.3.5",
    "pytest>=8.4.1",
    "python-dotenv>=1.0.0",
    "replicate>=1.0.6",
    "requests>=2.31.0",
    "resend>=2.10.0",
    "twilio>=9.8.0",
    "universal_mcp>=0.1.23",
]

[project.license]
text = "MIT"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov",
]
dev = [
    "ruff",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/universal-mcp/applications"
Repository = "https://github.com/universal-mcp/applications"

[tool.hatch.version]
path = "src/universal_mcp_applications/__init__.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov-report term-missing --cov-config=pyproject.toml --cov=src/universal_mcp_applications --cov=tests {args:tests}"
lint = "ruff check . && ruff format --check ."
format = "ruff format ."

[tool.hatch.build.targets.wheel]
packages = [
    "src/universal_mcp_applications",
]

[tool.coverage.run]
source = [
    "src/universal_mcp_applications",
]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.ruff]
line-length = 88
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "PL",
    "T20",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
